--- a/Case_Engenheiro_de_Dados.ipynb
+++ b/Case_Engenheiro_de_Dados.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbp33Pohr14GsLNLrKAFN1",
+      "authorship_tag": "ABX9TyPDTEgBl3ak8ApaNvZdu/U2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "itaBhW-G9nwC",
-        "outputId": "b941c87e-77da-4f36-cbad-3d93d6c87516"
+        "outputId": "3988d7eb-8e6a-4117-e1ea-e086b30c5fc7"
       },
       "outputs": [
         {
@@ -148,6 +148,38 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df_saldo_02_04_2022.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MYW2CMtSUxsE",
+        "outputId": "3746d3dd-4791-4645-d92c-a0b6e3a1de57"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------+----------+-----------------------+\n",
+            "|        CPF|      data|movimentacao_02_04_2022|\n",
+            "+-----------+----------+-----------------------+\n",
+            "|00000000010|02/04/2022|                 600.35|\n",
+            "|00000000007|02/04/2022|                 292.86|\n",
+            "|00000000006|02/04/2022|                 283.77|\n",
+            "|00000000004|02/04/2022|                 241.62|\n",
+            "|00000000005|02/04/2022|                  87.63|\n",
+            "+-----------+----------+-----------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Join com as 3 tabelas, baseando no CPF como chave primaria\n",
@@ -182,14 +214,19 @@
         "        F.col(\"data_inicio\"),\n",
         "        F.round(F.col(\"Saldo_Inicial_CC\"), 2).alias(\"saldo_inicial\"),\n",
         "        F.round(F.when(F.col(\"movimentacao_02_04_2022\").isNull(), 0).otherwise(F.col(\"movimentacao_02_04_2022\")), 2).alias(\"movimentacao_02_04_2022\"),\n",
+        "        F.round(\n",
+        "            F.when(F.col(\"movimentacao_02_04_2022\") != 0.0, F.col(\"Saldo_Inicial_CC\") + F.col(\"movimentacao_02_04_2022\"))\n",
+        "            .otherwise(F.col(\"Saldo_Inicial_CC\")), 2\n",
+        "        ).alias(\"saldo_total_02_04_2022\"),\n",
         "        F.round(F.when(F.col(\"movimentacao_03_04_2022\").isNull(), 0).otherwise(F.col(\"movimentacao_03_04_2022\")), 2).alias(\"movimentacao_03_04_2022\")\n",
+        "\n",
         "    )\n",
         ")"
       ],
       "metadata": {
-        "id": "pf5m8N4aMv4D"
+        "id": "-07bLi8aWOzd"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -225,7 +262,7 @@
       "metadata": {
         "id": "anT9MTzqM8xi"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -249,7 +286,7 @@
       "metadata": {
         "id": "RVJxIt-lJgVk"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -271,30 +308,69 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WCfhtv5bA-Eh",
-        "outputId": "ddbd7047-7cd8-4298-8a80-1335e63c0eb8"
+        "id": "G7YPFUiuWRHL",
+        "outputId": "866dd065-b343-48c9-e0dd-1f07f55d6476"
       },
-      "execution_count": 5,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-----------+-----------+-------------+-----------------------+-----------------------+-----------+--------------+\n",
-            "|CPF        |data_inicio|saldo_inicial|movimentacao_02_04_2022|movimentacao_03_04_2022|saldo_total|saldo_negativo|\n",
-            "+-----------+-----------+-------------+-----------------------+-----------------------+-----------+--------------+\n",
-            "|00000000001|01/04/2022 |523.86       |0.0                    |891.32                 |1415.18    |Nao           |\n",
-            "|00000000002|01/04/2022 |917.78       |0.0                    |548.93                 |1466.71    |Nao           |\n",
-            "|00000000003|01/04/2022 |321.84       |0.0                    |-309.27                |12.57      |Nao           |\n",
-            "|00000000004|01/04/2022 |271.51       |241.62                 |0.0                    |513.13     |Nao           |\n",
-            "|00000000005|01/04/2022 |225.55       |87.63                  |169.51                 |482.69     |Nao           |\n",
-            "|00000000006|01/04/2022 |875.5        |283.77                 |161.22                 |1320.49    |Nao           |\n",
-            "|00000000007|01/04/2022 |365.88       |292.86                 |133.67                 |792.41     |Nao           |\n",
-            "|00000000008|01/04/2022 |832.63       |0.0                    |190.36                 |1022.99    |Nao           |\n",
-            "|00000000009|01/04/2022 |221.12       |0.0                    |0.0                    |221.12     |Nao           |\n",
-            "|00000000010|NULL       |0.0          |0.0                    |-274.74                |-274.74    |Sim           |\n",
-            "|00000000011|NULL       |0.0          |0.0                    |768.36                 |768.36     |Nao           |\n",
-            "+-----------+-----------+-------------+-----------------------+-----------------------+-----------+--------------+\n",
+            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+-----------+--------------+\n",
+            "|CPF        |data_inicio|saldo_inicial|movimentacao_02_04_2022|saldo_total_02_04_2022|movimentacao_03_04_2022|saldo_total|saldo_negativo|\n",
+            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+-----------+--------------+\n",
+            "|00000000001|01/04/2022 |523.86       |0.0                    |523.86                |891.32                 |1415.18    |Nao           |\n",
+            "|00000000002|01/04/2022 |917.78       |0.0                    |917.78                |548.93                 |1466.71    |Nao           |\n",
+            "|00000000003|01/04/2022 |321.84       |0.0                    |321.84                |-309.27                |12.57      |Nao           |\n",
+            "|00000000004|01/04/2022 |271.51       |241.62                 |513.13                |0.0                    |513.13     |Nao           |\n",
+            "|00000000005|01/04/2022 |225.55       |87.63                  |313.18                |169.51                 |482.69     |Nao           |\n",
+            "|00000000006|01/04/2022 |875.5        |283.77                 |1159.27               |161.22                 |1320.49    |Nao           |\n",
+            "|00000000007|01/04/2022 |365.88       |292.86                 |658.74                |133.67                 |792.41     |Nao           |\n",
+            "|00000000008|01/04/2022 |832.63       |0.0                    |832.63                |190.36                 |1022.99    |Nao           |\n",
+            "|00000000009|01/04/2022 |221.12       |0.0                    |221.12                |0.0                    |221.12     |Nao           |\n",
+            "|00000000010|NULL       |0.0          |0.0                    |NULL                  |-274.74                |-274.74    |Sim           |\n",
+            "|00000000011|NULL       |0.0          |0.0                    |NULL                  |768.36                 |768.36     |Nao           |\n",
+            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+-----------+--------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Apresentando DataFrame\n",
+        "df_saldo_atualizado.show(truncate=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WCfhtv5bA-Eh",
+        "outputId": "d8e96ca4-6abf-4eb0-c4ee-21903cdf928a"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+----------------------+-----------+--------------+\n",
+            "|CPF        |data_inicio|saldo_inicial|movimentacao_02_04_2022|saldo_total_02_04_2022|movimentacao_03_04_2022|saldo_total_03_04_2022|saldo_total|saldo_negativo|\n",
+            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+----------------------+-----------+--------------+\n",
+            "|00000000001|01/04/2022 |523.86       |523.86                 |1047.72               |891.32                 |1415.18               |1939.04    |Nao           |\n",
+            "|00000000002|01/04/2022 |917.78       |917.78                 |1835.56               |548.93                 |1466.71               |2384.49    |Nao           |\n",
+            "|00000000003|01/04/2022 |321.84       |321.84                 |643.68                |-309.27                |12.57                 |334.41     |Nao           |\n",
+            "|00000000004|01/04/2022 |271.51       |241.62                 |513.13                |0.0                    |543.02                |513.13     |Nao           |\n",
+            "|00000000005|01/04/2022 |225.55       |87.63                  |313.18                |169.51                 |395.06                |482.69     |Nao           |\n",
+            "|00000000006|01/04/2022 |875.5        |283.77                 |1159.27               |161.22                 |1036.72               |1320.49    |Nao           |\n",
+            "|00000000007|01/04/2022 |365.88       |292.86                 |658.74                |133.67                 |499.55                |792.41     |Nao           |\n",
+            "|00000000008|01/04/2022 |832.63       |832.63                 |1665.26               |190.36                 |1022.99               |1855.62    |Nao           |\n",
+            "|00000000009|01/04/2022 |221.12       |221.12                 |442.24                |0.0                    |442.24                |442.24     |Nao           |\n",
+            "|00000000010|NULL       |0.0          |0.0                    |NULL                  |-274.74                |NULL                  |-274.74    |Sim           |\n",
+            "|00000000011|NULL       |0.0          |0.0                    |NULL                  |768.36                 |NULL                  |768.36     |Nao           |\n",
+            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+----------------------+-----------+--------------+\n",
             "\n"
           ]
         }
@@ -311,19 +387,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qOb6UBfUPof9",
-        "outputId": "d8a39558-efea-4ac6-9a1a-7b21601db5d8"
+        "outputId": "a10b9d41-adb5-4ff7-cf8a-710715716c58"
       },
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "DataFrame[CPF: string, data_inicio: string, saldo_inicial: double, movimentacao_02_04_2022: double, movimentacao_03_04_2022: double, saldo_total: double, saldo_negativo: string]"
+              "DataFrame[CPF: string, data_inicio: string, saldo_inicial: double, movimentacao_02_04_2022: double, saldo_total_02_04_2022: double, movimentacao_03_04_2022: double, saldo_total_03_04_2022: double, saldo_total: double, saldo_negativo: string]"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 10
         }
       ]
     },
@@ -333,7 +409,7 @@
       "metadata": {
         "id": "Pl4jqUfRR40d"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     }
   ]
