--- a/Case_Engenheiro_de_Dados.ipynb
+++ b/Case_Engenheiro_de_Dados.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDTEgBl3ak8ApaNvZdu/U2",
+      "authorship_tag": "ABX9TyPoW8GT0/YNKyrB9c9z17Rl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "itaBhW-G9nwC",
-        "outputId": "3988d7eb-8e6a-4117-e1ea-e086b30c5fc7"
+        "outputId": "7380503a-3df2-4aa6-c369-01564de4ea8d"
       },
       "outputs": [
         {
@@ -157,7 +157,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MYW2CMtSUxsE",
-        "outputId": "3746d3dd-4791-4645-d92c-a0b6e3a1de57"
+        "outputId": "679f23b2-96b7-456d-968d-f22e948fb812"
       },
       "execution_count": 4,
       "outputs": [
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "-07bLi8aWOzd"
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "anT9MTzqM8xi"
       },
-      "execution_count": 22,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -309,9 +309,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G7YPFUiuWRHL",
-        "outputId": "866dd065-b343-48c9-e0dd-1f07f55d6476"
+        "outputId": "af0cdf7d-32f2-44c0-fa86-acae71a59c87"
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,45 +340,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#Apresentando DataFrame\n",
-        "df_saldo_atualizado.show(truncate=False)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WCfhtv5bA-Eh",
-        "outputId": "d8e96ca4-6abf-4eb0-c4ee-21903cdf928a"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+----------------------+-----------+--------------+\n",
-            "|CPF        |data_inicio|saldo_inicial|movimentacao_02_04_2022|saldo_total_02_04_2022|movimentacao_03_04_2022|saldo_total_03_04_2022|saldo_total|saldo_negativo|\n",
-            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+----------------------+-----------+--------------+\n",
-            "|00000000001|01/04/2022 |523.86       |523.86                 |1047.72               |891.32                 |1415.18               |1939.04    |Nao           |\n",
-            "|00000000002|01/04/2022 |917.78       |917.78                 |1835.56               |548.93                 |1466.71               |2384.49    |Nao           |\n",
-            "|00000000003|01/04/2022 |321.84       |321.84                 |643.68                |-309.27                |12.57                 |334.41     |Nao           |\n",
-            "|00000000004|01/04/2022 |271.51       |241.62                 |513.13                |0.0                    |543.02                |513.13     |Nao           |\n",
-            "|00000000005|01/04/2022 |225.55       |87.63                  |313.18                |169.51                 |395.06                |482.69     |Nao           |\n",
-            "|00000000006|01/04/2022 |875.5        |283.77                 |1159.27               |161.22                 |1036.72               |1320.49    |Nao           |\n",
-            "|00000000007|01/04/2022 |365.88       |292.86                 |658.74                |133.67                 |499.55                |792.41     |Nao           |\n",
-            "|00000000008|01/04/2022 |832.63       |832.63                 |1665.26               |190.36                 |1022.99               |1855.62    |Nao           |\n",
-            "|00000000009|01/04/2022 |221.12       |221.12                 |442.24                |0.0                    |442.24                |442.24     |Nao           |\n",
-            "|00000000010|NULL       |0.0          |0.0                    |NULL                  |-274.74                |NULL                  |-274.74    |Sim           |\n",
-            "|00000000011|NULL       |0.0          |0.0                    |NULL                  |768.36                 |NULL                  |768.36     |Nao           |\n",
-            "+-----------+-----------+-------------+-----------------------+----------------------+-----------------------+----------------------+-----------+--------------+\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Demonstração dos tipos de dados, que foi definido no inicio do codigo\n",
         "df_saldo_atualizado"
       ],
@@ -387,19 +348,94 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qOb6UBfUPof9",
-        "outputId": "a10b9d41-adb5-4ff7-cf8a-710715716c58"
+        "outputId": "9d42db19-a187-43fc-947d-7f0716c2a255"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "DataFrame[CPF: string, data_inicio: string, saldo_inicial: double, movimentacao_02_04_2022: double, saldo_total_02_04_2022: double, movimentacao_03_04_2022: double, saldo_total_03_04_2022: double, saldo_total: double, saldo_negativo: string]"
+              "DataFrame[CPF: string, data_inicio: string, saldo_inicial: double, movimentacao_02_04_2022: double, saldo_total_02_04_2022: double, movimentacao_03_04_2022: double, saldo_total: double, saldo_negativo: string]"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Coloquei o resultado em texto como solicitado no email caso seja exatamente desta forma, e em DataFrame por ser o padrão.\n",
+        "# Adicionando coluna formatada\n",
+        "df_saldo_atualizado = df_saldo_atualizado.withColumn(\n",
+        "    \"saldo_total\",\n",
+        "    F.round(\n",
+        "        F.col(\"saldo_inicial\") + F.coalesce(F.col(\"movimentacao_02_04_2022\"), F.lit(0.0)) + F.coalesce(F.col(\"movimentacao_03_04_2022\"), F.lit(0.0)), 2\n",
+        "    )\n",
+        ")\n",
+        "\n",
+        "# Adicionando coluna formatada\n",
+        "df_saldo_atualizado = df_saldo_atualizado.withColumn(\n",
+        "    \"informacoes_formatadas\",\n",
+        "    F.concat_ws(\n",
+        "        \" \",\n",
+        "        F.lit(\"Cliente\"),\n",
+        "        F.col(\"CPF\"),\n",
+        "        F.lit(\"- Saldo Inicial\"),\n",
+        "        F.col(\"saldo_inicial\"),\n",
+        "        F.col(\"data_inicio\"),\n",
+        "        F.lit(\" Movimentação do dia 02/04/2022 -\"),\n",
+        "        F.col(\"movimentacao_02_04_2022\"),\n",
+        "        F.lit(\"Saldo final do dia 02/04/2022\"),\n",
+        "        F.round(\n",
+        "            F.when(F.col(\"movimentacao_02_04_2022\") != 0.0, F.col(\"saldo_inicial\") + F.col(\"movimentacao_02_04_2022\"))\n",
+        "            .otherwise(F.col(\"saldo_inicial\")), 2\n",
+        "        ).alias(\"saldo_total_02_04_2022\"),\n",
+        "        F.lit(\" Movimentação do dia 03/04/2022 -\"),\n",
+        "        F.col(\"movimentacao_03_04_2022\"),\n",
+        "        F.lit(\"Saldo final do dia 03/04/2022\"),\n",
+        "        F.col(\"saldo_total\")\n",
+        "    )\n",
+        ")\n",
+        "\n",
+        "# Selecionando as colunas desejadas\n",
+        "resultado_final = df_saldo_atualizado.select(\"CPF\", \"informacoes_formatadas\")\n",
+        "\n",
+        "# Exibindo o resultado\n",
+        "resultado_final.show(truncate=False)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GHxJbEKbdyh3",
+        "outputId": "59f8e8c9-a14d-49a2-f7f4-02d36c2b6b5a"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+            "|CPF        |informacoes_formatadas                                                                                                                                                                                            |\n",
+            "+-----------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+            "|00000000001|Cliente 00000000001 - Saldo Inicial 523.86 01/04/2022  Movimentação do dia 02/04/2022 - 0.0 Saldo final do dia 02/04/2022 523.86  Movimentação do dia 03/04/2022 - 891.32 Saldo final do dia 03/04/2022 1415.18   |\n",
+            "|00000000002|Cliente 00000000002 - Saldo Inicial 917.78 01/04/2022  Movimentação do dia 02/04/2022 - 0.0 Saldo final do dia 02/04/2022 917.78  Movimentação do dia 03/04/2022 - 548.93 Saldo final do dia 03/04/2022 1466.71   |\n",
+            "|00000000003|Cliente 00000000003 - Saldo Inicial 321.84 01/04/2022  Movimentação do dia 02/04/2022 - 0.0 Saldo final do dia 02/04/2022 321.84  Movimentação do dia 03/04/2022 - -309.27 Saldo final do dia 03/04/2022 12.57    |\n",
+            "|00000000004|Cliente 00000000004 - Saldo Inicial 271.51 01/04/2022  Movimentação do dia 02/04/2022 - 241.62 Saldo final do dia 02/04/2022 513.13  Movimentação do dia 03/04/2022 - 0.0 Saldo final do dia 03/04/2022 513.13    |\n",
+            "|00000000005|Cliente 00000000005 - Saldo Inicial 225.55 01/04/2022  Movimentação do dia 02/04/2022 - 87.63 Saldo final do dia 02/04/2022 313.18  Movimentação do dia 03/04/2022 - 169.51 Saldo final do dia 03/04/2022 482.69  |\n",
+            "|00000000006|Cliente 00000000006 - Saldo Inicial 875.5 01/04/2022  Movimentação do dia 02/04/2022 - 283.77 Saldo final do dia 02/04/2022 1159.27  Movimentação do dia 03/04/2022 - 161.22 Saldo final do dia 03/04/2022 1320.49|\n",
+            "|00000000007|Cliente 00000000007 - Saldo Inicial 365.88 01/04/2022  Movimentação do dia 02/04/2022 - 292.86 Saldo final do dia 02/04/2022 658.74  Movimentação do dia 03/04/2022 - 133.67 Saldo final do dia 03/04/2022 792.41 |\n",
+            "|00000000008|Cliente 00000000008 - Saldo Inicial 832.63 01/04/2022  Movimentação do dia 02/04/2022 - 0.0 Saldo final do dia 02/04/2022 832.63  Movimentação do dia 03/04/2022 - 190.36 Saldo final do dia 03/04/2022 1022.99   |\n",
+            "|00000000009|Cliente 00000000009 - Saldo Inicial 221.12 01/04/2022  Movimentação do dia 02/04/2022 - 0.0 Saldo final do dia 02/04/2022 221.12  Movimentação do dia 03/04/2022 - 0.0 Saldo final do dia 03/04/2022 221.12       |\n",
+            "|00000000010|Cliente 00000000010 - Saldo Inicial 0.0  Movimentação do dia 02/04/2022 - 0.0 Saldo final do dia 02/04/2022 0.0  Movimentação do dia 03/04/2022 - -274.74 Saldo final do dia 03/04/2022 -274.74                   |\n",
+            "|00000000011|Cliente 00000000011 - Saldo Inicial 0.0  Movimentação do dia 02/04/2022 - 0.0 Saldo final do dia 02/04/2022 0.0  Movimentação do dia 03/04/2022 - 768.36 Saldo final do dia 03/04/2022 768.36                     |\n",
+            "+-----------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+            "\n"
+          ]
         }
       ]
     },
@@ -407,7 +443,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Pl4jqUfRR40d"
+        "id": "cRVtPaLebO3N"
       },
       "execution_count": 10,
       "outputs": []
